--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -22,7 +22,7 @@
 
     @include mobile-view() {
         flex-direction: column;
-      }
+    }
 }
 
 .page-content {
@@ -47,7 +47,11 @@
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    gap: 0.75rem;
+    // gap: 0.75rem;
+
+    :not(:last-child) {
+        margin-bottom: .75rem;
+    }
 
     p {
         color: #dbddef;
@@ -102,9 +106,11 @@
         span {
             width: 15rem;
             text-overflow: ellipsis;
+
             @include mobile-view() {
                 width: 13rem;
             }
+
             @include sm-mobile-view() {
                 width: 10rem;
             }
